fixing ipad air collapsed menu footer

--- a/static/src/stylesheets/layout/new-header/_menu-group.scss
+++ b/static/src/stylesheets/layout/new-header/_menu-group.scss
@@ -153,7 +153,7 @@
     @include mq(desktop) {
         color: $news-support-1;
         position: absolute;
-        right: gs-span(2) + $gs-gutter * 1.5;
+        right: $gs-gutter;
         top: 0;
         width: gs-span(2);
 
@@ -167,6 +167,11 @@
 
     @include mq(leftCol) {
         margin-right: $gs-gutter / 2;
+        right: gs-span(2) + $gs-gutter * 1.5;
+
+        @supports(display: flex) {
+            right: auto;
+        }
     }
 
     @include mq(wide) {
